add types to package.json (#112)
awesome typings, but TypeScript doesn't automatically detect them unless they're defined in the package.json https://www.typescriptlang.org/docs/handbook/declaration-files/publishing.html

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.6.2",
   "description": "Segment.io analytics integration for redux.",
   "main": "dist/index.js",
+  "types": "typings/redux-segment.d.ts",
   "scripts": {
     "prepublish": "make build && npm run build",
     "lint": "standard | snazzy",
